fix third level hover behind second level

--- a/assets/css/nav-demo.css
+++ b/assets/css/nav-demo.css
@@ -62,6 +62,10 @@ nav {
     left: 0;
     z-index: 5;
 }
+.sub > li {
+	position: relative;
+	z-index: 1;
+}
 
 @media screen and (max-width: 720px) {
 	.has-sub::after, .has-sub::before, .sub .has-sub::after, .sub .has-sub::before {
